--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h2 {
 .btn:visited {
   background-color: #087f5b;
   padding: 16px 32px;
-  border-radius: 30px;
+  /*border-radius: 30px;*/
   font-size: 18px;
   text-decoration: none;
   text-transform: uppercase;
@@ -52,7 +52,10 @@ h2 {
   color: #fff;
   display: inline-block;
 }
-
+.btn:hover,
+.btn:active {
+  background-color: #099268;
+}
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
