--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h2 {
   font-weight: 500;
   color: #fff;
   display: inline-block;
+  border-radius: 100px;
 }
 .btn:hover,
 .btn:active {
@@ -119,6 +120,7 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -137,7 +139,21 @@ img {
   line-height: 1.7;
 }
 
+img {
+  border-radius: 12px;
+}
+
 /* CHAIRS */
+.chair {
+  box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.07);
+  border-radius: 12px;
+}
+
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 .chair-box {
   padding: 24px;
 }
